// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectMultiple Snapshots matches snapshot for default state 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col gap-1 w-full"
  >
    <div
      class="flex flex-row"
    >
      <p
        class="text-sm font-bold text-neutral11"
      >
        Test Label
      </p>
    </div>
    <div
      class="relative"
    >
      <div
        aria-disabled="false"
        class="flex min-h-[52px] w-full cursor-pointer items-center gap-1 rounded-[6px] border px-3 py-2 border-neutral5 hover:border-blue6 focus:border-blue6 focus:outline-none"
        tabindex="0"
      >
        <div
          class="hidden-barscrolling flex max-h-[130px] w-full flex-wrap gap-1 overflow-y-auto"
        >
          <p
            class="text-base w-full text-neutral6"
          >
            Select options
          </p>
        </div>
        <div
          class="flex flex-row items-center gap-2"
        >
          <svg
            class=""
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.88 9.29006L12 13.1701L8.11998 9.29006C7.72998 8.90006 7.09998 8.90006 6.70998 9.29006C6.31998 9.68006 6.31998 10.3101 6.70998 10.7001L11.3 15.2901C11.69 15.6801 12.32 15.6801 12.71 15.2901L17.3 10.7001C17.69 10.3101 17.69 9.68006 17.3 9.29006C16.91 8.91006 16.27 8.90006 15.88 9.29006Z"
              fill="#595959"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectMultiple Snapshots matches snapshot for disabled state 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col gap-1 w-full"
  >
    <div
      class="flex flex-row"
    >
      <p
        class="text-sm font-bold text-neutral11"
      >
        Test Label
      </p>
    </div>
    <div
      class="relative"
    >
      <div
        aria-disabled="true"
        class="flex min-h-[52px] w-full items-center gap-1 rounded-[6px] border px-3 py-2 cursor-not-allowed border-neutral6 bg-neutral4 text-neutral7"
        tabindex="0"
      >
        <div
          class="hidden-barscrolling flex max-h-[130px] w-full flex-wrap gap-1 overflow-y-auto"
        >
          <p
            class="text-base w-full text-neutral7"
          >
            Select options
          </p>
        </div>
        <div
          class="flex flex-row items-center gap-2"
        >
          <svg
            class=""
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.88 9.29006L12 13.1701L8.11998 9.29006C7.72998 8.90006 7.09998 8.90006 6.70998 9.29006C6.31998 9.68006 6.31998 10.3101 6.70998 10.7001L11.3 15.2901C11.69 15.6801 12.32 15.6801 12.71 15.2901L17.3 10.7001C17.69 10.3101 17.69 9.68006 17.3 9.29006C16.91 8.91006 16.27 8.90006 15.88 9.29006Z"
              fill="#8C8C8C"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectMultiple Snapshots matches snapshot for error state 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col gap-1 w-full"
  >
    <div
      class="flex flex-row"
    >
      <p
        class="text-sm font-bold text-neutral11"
      >
        Test Label
      </p>
    </div>
    <div
      class="relative"
    >
      <div
        aria-disabled="false"
        class="flex min-h-[52px] w-full cursor-pointer items-center gap-1 rounded-[6px] border px-3 py-2 border-error5"
        tabindex="0"
      >
        <div
          class="hidden-barscrolling flex max-h-[130px] w-full flex-wrap gap-1 overflow-y-auto"
        >
          <p
            class="text-base w-full text-neutral6"
          >
            Select options
          </p>
        </div>
        <div
          class="flex flex-row items-center gap-2"
        >
          <svg
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.99984 5.83317C10.4582 5.83317 10.8332 6.20817 10.8332 6.6665V9.99984C10.8332 10.4582 10.4582 10.8332 9.99984 10.8332C9.5415 10.8332 9.1665 10.4582 9.1665 9.99984V6.6665C9.1665 6.20817 9.5415 5.83317 9.99984 5.83317ZM9.9915 1.6665C5.3915 1.6665 1.6665 5.39984 1.6665 9.99984C1.6665 14.5998 5.3915 18.3332 9.9915 18.3332C14.5998 18.3332 18.3332 14.5998 18.3332 9.99984C18.3332 5.39984 14.5998 1.6665 9.9915 1.6665ZM9.99984 16.6665C6.3165 16.6665 3.33317 13.6832 3.33317 9.99984C3.33317 6.3165 6.3165 3.33317 9.99984 3.33317C13.6832 3.33317 16.6665 6.3165 16.6665 9.99984C16.6665 13.6832 13.6832 16.6665 9.99984 16.6665ZM10.8332 14.1665H9.1665V12.4998H10.8332V14.1665Z"
              fill="#F0454B"
            />
          </svg>
          <svg
            class=""
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.88 9.29006L12 13.1701L8.11998 9.29006C7.72998 8.90006 7.09998 8.90006 6.70998 9.29006C6.31998 9.68006 6.31998 10.3101 6.70998 10.7001L11.3 15.2901C11.69 15.6801 12.32 15.6801 12.71 15.2901L17.3 10.7001C17.69 10.3101 17.69 9.68006 17.3 9.29006C16.91 8.91006 16.27 8.90006 15.88 9.29006Z"
              fill="#595959"
            />
          </svg>
        </div>
      </div>
    </div>
    <p
      class="text-xs relative z-0 text-error5"
    >
      Error message
    </p>
  </div>
</DocumentFragment>
`;

exports[`SelectMultiple Snapshots matches snapshot for helper text state 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col gap-1 w-full"
  >
    <div
      class="flex flex-row"
    >
      <p
        class="text-sm font-bold text-neutral11"
      >
        Test Label
      </p>
    </div>
    <div
      class="relative"
    >
      <div
        aria-disabled="false"
        class="flex min-h-[52px] w-full cursor-pointer items-center gap-1 rounded-[6px] border px-3 py-2 border-neutral5 hover:border-blue6 focus:border-blue6 focus:outline-none"
        tabindex="0"
      >
        <div
          class="hidden-barscrolling flex max-h-[130px] w-full flex-wrap gap-1 overflow-y-auto"
        >
          <p
            class="text-base w-full text-neutral6"
          >
            Select options
          </p>
        </div>
        <div
          class="flex flex-row items-center gap-2"
        >
          <svg
            class=""
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.88 9.29006L12 13.1701L8.11998 9.29006C7.72998 8.90006 7.09998 8.90006 6.70998 9.29006C6.31998 9.68006 6.31998 10.3101 6.70998 10.7001L11.3 15.2901C11.69 15.6801 12.32 15.6801 12.71 15.2901L17.3 10.7001C17.69 10.3101 17.69 9.68006 17.3 9.29006C16.91 8.91006 16.27 8.90006 15.88 9.29006Z"
              fill="#595959"
            />
          </svg>
        </div>
      </div>
    </div>
    <p
      class="text-xs relative z-0 text-neutral7"
    >
      Helper text
    </p>
  </div>
</DocumentFragment>
`;

exports[`SelectMultiple Snapshots matches snapshot for no options state 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col gap-1 w-full"
  >
    <div
      class="flex flex-row"
    >
      <p
        class="text-sm font-bold text-neutral11"
      >
        Test Label
      </p>
    </div>
    <div
      class="relative"
    >
      <div
        aria-disabled="false"
        class="flex min-h-[52px] w-full cursor-pointer items-center gap-1 rounded-[6px] border px-3 py-2 border-neutral5 hover:border-blue6 focus:border-blue6 focus:outline-none"
        tabindex="0"
      >
        <div
          class="hidden-barscrolling flex max-h-[130px] w-full flex-wrap gap-1 overflow-y-auto"
        >
          <p
            class="text-base w-full text-neutral6"
          >
            Select options
          </p>
        </div>
        <div
          class="flex flex-row items-center gap-2"
        >
          <svg
            class=""
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.88 9.29006L12 13.1701L8.11998 9.29006C7.72998 8.90006 7.09998 8.90006 6.70998 9.29006C6.31998 9.68006 6.31998 10.3101 6.70998 10.7001L11.3 15.2901C11.69 15.6801 12.32 15.6801 12.71 15.2901L17.3 10.7001C17.69 10.3101 17.69 9.68006 17.3 9.29006C16.91 8.91006 16.27 8.90006 15.88 9.29006Z"
              fill="#595959"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectMultiple Snapshots matches snapshot for selected state 1`] = `
<DocumentFragment>
  <div
    class="relative flex flex-col gap-1 w-full"
  >
    <div
      class="flex flex-row"
    >
      <p
        class="text-sm font-bold text-neutral11"
      >
        Test Label
      </p>
    </div>
    <div
      class="relative"
    >
      <div
        aria-disabled="false"
        class="flex min-h-[52px] w-full cursor-pointer items-center gap-1 rounded-[6px] border px-3 py-2 border-neutral8 hover:border-blue6 focus:border-blue6 focus:outline-none"
        tabindex="0"
      >
        <div
          class="hidden-barscrolling flex max-h-[130px] w-full flex-wrap gap-1 overflow-y-auto"
        >
          <div
            class="flex min-w-[100px] items-center justify-between gap-1.5 rounded-full border border-[#DEDEDE] px-3 py-1 "
          >
            <p
              class="text-xs"
            >
              Option 1
            </p>
            <button
              class="flex size-4 items-center justify-center rounded-full bg-blue8 hover:text-blue9"
            >
              <svg
                fill="none"
                height="14"
                viewBox="0 0 20 20"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.33317 15.8334L4.1665 14.6667L8.83317 10.0001L4.1665 5.33341L5.33317 4.16675L9.99984 8.83341L14.6665 4.16675L15.8332 5.33341L11.1665 10.0001L15.8332 14.6667L14.6665 15.8334L9.99984 11.1667L5.33317 15.8334Z"
                  fill="white"
                />
              </svg>
            </button>
          </div>
          <div
            class="flex min-w-[100px] items-center justify-between gap-1.5 rounded-full border border-[#DEDEDE] px-3 py-1 "
          >
            <p
              class="text-xs"
            >
              Option 2
            </p>
            <button
              class="flex size-4 items-center justify-center rounded-full bg-blue8 hover:text-blue9"
            >
              <svg
                fill="none"
                height="14"
                viewBox="0 0 20 20"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.33317 15.8334L4.1665 14.6667L8.83317 10.0001L4.1665 5.33341L5.33317 4.16675L9.99984 8.83341L14.6665 4.16675L15.8332 5.33341L11.1665 10.0001L15.8332 14.6667L14.6665 15.8334L9.99984 11.1667L5.33317 15.8334Z"
                  fill="white"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="flex flex-row items-center gap-2"
        >
          <svg
            class=""
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.88 9.29006L12 13.1701L8.11998 9.29006C7.72998 8.90006 7.09998 8.90006 6.70998 9.29006C6.31998 9.68006 6.31998 10.3101 6.70998 10.7001L11.3 15.2901C11.69 15.6801 12.32 15.6801 12.71 15.2901L17.3 10.7001C17.69 10.3101 17.69 9.68006 17.3 9.29006C16.91 8.91006 16.27 8.90006 15.88 9.29006Z"
              fill="#595959"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
